--- a/src/App.css
+++ b/src/App.css
@@ -40,26 +40,15 @@ button {
 }
 
 button:hover {
-  color: #fffbe0;
-  border: 1px solid #ffce5c22;
+  border: solid rgb(117, 117, 117) 2px;
+
+}
+
+button:active{
+  border: solid rgb(117, 117, 117) 6px;
 }
 
 
-.result {
-  position: relative;
-  width: 320px;
-  height: 80px;
-  padding: 8px;
-  overflow: hidden;
-  background-color: rgba(19, 19, 19, .64);
-  font-size: 32px;
-  line-height: 2;
-  color: #c93cd6;
-  text-align: right;
-  direction: rtl;
-  white-space: nowrap;
-  box-sizing: border-box;
-}
 
 .functions button {
   display: inline-block;
